Fixed double scrollbar

--- a/index.css
+++ b/index.css
@@ -105,7 +105,8 @@ body {
   align-items: center;
   justify-content: center;
   align-items: center;
-  overflow-y: scroll;
+  overflow-y: auto;
+  overflow-x: hidden;
   
   width: 100%;
   height: 100%;
